--- a/AzureLinuxGcExcel/AzureLinuxGcExcel/AzureLinuxGcExcel/Views/Shared/_Layout.cshtml
+++ b/AzureLinuxGcExcel/AzureLinuxGcExcel/AzureLinuxGcExcel/Views/Shared/_Layout.cshtml
@@ -23,14 +23,21 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Aspose">Aspose</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="GrapeCity">GrapeCity</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="SpreadsheetGear">SpreadsheetGear</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="container-fluid">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
