필요없는 코드 제거, 라이센스 키 완전히 숨김, css 추가

--- a/AzureLinuxGcExcel/AzureLinuxGcExcel/AzureLinuxGcExcel/Views/Home/Aspose.cshtml
+++ b/AzureLinuxGcExcel/AzureLinuxGcExcel/AzureLinuxGcExcel/Views/Home/Aspose.cshtml
@@ -14,7 +14,7 @@
 </form>
 
 
-<table class="table-bordered">
+<table class="table table-bordered">
     <thead>
         <tr>
             <th rowspan="2">LoadTime(s)</th>
@@ -47,7 +47,3 @@
         </tr>
     </tbody>
 </table>
-
-@section Scripts{
-
-}
