--- a/AzureLinuxGcExcel/AzureLinuxGcExcel/AzureLinuxGcExcel/Views/Home/GrapeCity.cshtml
+++ b/AzureLinuxGcExcel/AzureLinuxGcExcel/AzureLinuxGcExcel/Views/Home/GrapeCity.cshtml
@@ -14,7 +14,7 @@
 </form>
 
 
-<table class="table-bordered">
+<table class="table table-bordered">
     <thead>
         <tr>
             <th rowspan="2">LoadTime(s)</th>
@@ -47,7 +47,3 @@
         </tr>
     </tbody>
 </table>
-
-@section Scripts{
-
-}
